# recycling-buddy

./: .continue-here  .dockerignore  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  MAKEFILE_GUIDE.md  Makefile  QUICKSTART_UPLOAD.md  README.md  UPLOAD_FEATURE.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: api-build-deploy.yml  api-ci.yml  api-deploy.yml  infra-deploy.yml  ui-deploy.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-guidelines-data-layer/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-UAT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.specify/memory/: constitution.md
api/: CLAUDE.md  Dockerfile  Dockerfile.dockerignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  task-definition.json
api/app/: config.py  guidelines.py  inference.py  main.py
api/app/services/: s3.py
api/config/: .env.dev  .env.test  dev.env  test.env
api/src/: __init__.py  config.py  guidelines.py  inference.py  labels.py  main.py
api/src/services/: s3.py
api/tests/: __init__.py  test_advice_endpoint.py  test_guidelines.py  test_inference.py  test_labels.py  test_labels_data.py  test_predict_endpoint.py  test_s3_service.py  test_upload.py
data/: label_to_rny.json
docs/plans/: 2026-03-02-lazy-model-loading-design.md  2026-03-02-lazy-model-loading.md  2026-03-02-merge-ci-cd-workflows-design.md  2026-03-02-merge-ci-cd-workflows.md  2026-03-02-recbuddy-package-design.md  2026-03-02-recbuddy-package.md  2026-03-02-remove-labels-shim-design.md  2026-03-02-remove-labels-shim.md  2026-03-02-remove-pyrefly-ty-design.md  2026-03-02-remove-pyrefly-ty.md  2026-03-02-rename-src-to-app-design.md  2026-03-02-rename-src-to-app.md  2026-03-03-model-promotion-design.md  2026-03-03-model-promotion.md  2026-03-03-model-versioning-design.md  2026-03-03-model-versioning.md  2026-03-03-tavily-search-grounding-design.md  2026-03-03-tavily-search-grounding.md  2026-03-04-labels-from-rny-design.md  2026-03-04-labels-from-rny.md
infra/: .gitignore  CLAUDE.md  Makefile  README.md  alb.tf  apprunner.tf  ecr.tf  ecs.tf  iam.tf  main.tf  networking.tf  outputs.tf  s3.tf  terraform.tfvars  variables.tf
model/: CLAUDE.md  Dockerfile  Dockerfile.dockerignore  Makefile  README.md  pyproject.toml  requirements.txt
model/recbuddy/: dataset.py  evaluate.py  labels.py  promote.py  train.py
model/src/: __init__.py  dataset.py  evaluate.py  train.py  transforms.py
model/tests/: __init__.py  conftest.py  test_dataset.py  test_evaluate.py  test_promote.py  test_train.py
scripts/: README.md  verify-upload.sh
shared/: README.md
shared/types/: prediction.ts
specs/001-waste-item-classifier/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-waste-item-classifier/checklists/: requirements.md
specs/001-waste-item-classifier/contracts/: inference-api.md
ui/: .env.test  CLAUDE.md  README.md  index.html  package-lock.json  vite.config.ts
ui/config/: .env.test
ui/src/: App.tsx
ui/src/components/: ItemPicker.css  ItemPicker.tsx  PhotoCapture.css  PhotoCapture.tsx
ui/src/hooks/: useImageUpload.ts  useLabels.ts
ui/src/services/: api.ts
ui/src/types/: index.ts
