[project]
name = "api"
version = "0.1.0"
description = "FastAPI backend for Recycling Buddy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "recbuddy",
    "boto3>=1.42.38",
    "fastapi>=0.128.0",
    "openai>=2.24.0",
    "pillow>=12.1.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "safetensors>=0.4.0",
    "torch",
    "torchvision",
    "uvicorn>=0.40.0",
]

# Use CPU-only PyTorch wheels on Linux (Docker); macOS uses PyPI wheels (includes MPS)
[tool.uv.sources]
recbuddy = { path = "../model" }
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "pyrefly>=0.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[tool.pyrefly]
search_path = ["."]

[tool.pyright]
# Override automatic src-layout detection
# Set import root to api directory (not api/src)
# This allows imports like 'from src.main import app' to work
include = ["src", "tests"]
stubPath = ""
venvPath = "."
venv = ".venv"
